Refactored fade in animation to utilize an intersection observer to fix bug on mobile animation.

--- a/src/app/home-services/home-services.component.scss
+++ b/src/app/home-services/home-services.component.scss
@@ -39,7 +39,7 @@ $font-size: 2rem;
   color: #736535;
   text-align: center;
   margin: 1rem;
-  font-size: $font-size *0.9;
+  font-size: $font-size *0.7;
   line-height: $font-size * 1.4;
   letter-spacing: 2px;
   font-weight: 600;
@@ -53,7 +53,7 @@ hr {
 }
 .card-text {
   margin-bottom: 1rem;
-  font-size: $font-size * 0.7;
+  font-size: $font-size * 0.6;
   line-height: $font-size;
   letter-spacing: 0.0045em;
   color: #3f3f3f;
@@ -71,11 +71,21 @@ hr {
   display: none;
 }
 .infoText{
-  opacity: 1;
+  opacity: 0;
+  transition:0.75s;
 }
 .fadeInText{
   transition:0.75s;
   opacity:1 !important;
+}
+@media(min-width:320px){
+  .card-text{
+    font-size: $font-size *0.7;
+  }
+  .card-title{
+    font-size: $font-size *0.8;
+
+  }
 }
 @media (min-width: 425px) {
   .card-img-top {
